Remove commons-io